[workspace]

members = [
    "two-sum",
    "add-two-numbers",
    "longest-substring-without-repeating-characters",
    "median-of-two-sorted-arrays",
    "longest-palindromic-substring",
    "zigzag-conversion",
    "reverse-integer",
    "string-to-integer-atoi",
    "palindrome-number",
    "regular-expression-matching",
    "container-with-most-water",
    "integer-to-roman",
    "roman-to-integer",
]
